Minor Improvements before release (#13)
* add params options